<resources>
    <string name="app_name">LiveStream</string>

    <string name="pref_default_video_frame_rate">15</string>
    <string name="pref_video_frame_rate">framerate</string>

    <string name="pref_default_video_encoding_bit_rate">400</string>

    <string name="pref_video_encoding_bit_rate">bitrate</string>

    <string name="pref_default_video_size_width">640</string>
    <string name="pref_video_size_width">video width</string>


    <string name="pref_default_video_size_height">480</string>
    <string name="pref_video_size_height">video height</string>

    <string name="pref_default_video_publish_and_play_id">ucloud_demo</string>
    <string name="pref_default_video_publish_and_play_title">stream id</string>

    <string name="pref_default_log_cache_dir">/sdcard/ucloud/log</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_activitys">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="live_welcome">welcome to live stream</string>
    <string name="em_main_title_home">直播大厅</string>
    <string name="em_main_title_live">直播大厅</string>
    <string name="em_main_title_me">我</string>

    <string name="em_live_common_cancel">取消</string>

    <string name="ease_list_no_data_text">暂无数据</string>


    <string name="em_live_type_interaction_title">互动直播</string>
    <string name="em_live_type_normal_introduction">超低卡顿、全链路质量透明的标准 CDN 直播</string>
    <string name="em_live_type_fast_title">极速直播</string>
    <string name="em_live_type_fast_introduction">低延时、强同步、高质量直播，观众与主播进行低频音视频互动</string>
    <string name="em_live_type_interaction_introduction">超低延时直播，观众频繁上麦与主播进行实时音视频互动</string>

    <string name="em_live_list_all_title">选择聊天室开始直播</string>
    <string name="em_live_list_living">直播大厅</string>

    <string name="em_live_list_item_living">正在直播</string>
    <string name="em_live_list_item_open">立即开播</string>
    <string name="em_live_list_item_continue">继续直播</string>
    <string name="em_live_list_item_ongoing">主播在播</string>
    <string name="em_live_list_item_lived">主播在播\n不能选择</string>


    <string name="em_live_input_hint">和大家来聊天吧</string>

    <string name="em_live_member_num">观众（%1$d）</string>

    <string name="em_live_anchor_self">主播</string>
    <string name="em_live_anchor_mute">禁言</string>
    <string name="em_live_anchor_muted">已禁言</string>


    <string name="em_live_audience_muted">禁言中</string>
    <string name="em_live_audience_loading">加载中...</string>

    <string name="em_live_anchor_remove_white">删除</string>
    <string name="em_live_anchor_remove_mute">解禁</string>
    <string name="em_live_anchor_like_info">被赞 %1$s</string>
    <string name="em_live_anchor_receive_gift_info">礼物 %1$s</string>
    <string name="em_live_user_fans">粉丝</string>
    <string name="em_live_user_star">被赞</string>
    <string name="em_live_user_attentions">关注</string>
    <string name="em_live_user_gift">礼物</string>
    <string name="em_live_user_send_gift">礼物</string>
    <string name="em_live_user_receive_gift">收到礼物</string>
    <string name="em_live_gift_name">礼物</string>
    <string name="em_live_gift_history">礼物记录</string>
    <string name="em_live_gift_total">共 %1$d 份</string>
    <string name="em_live_gift_send_total">打赏人数 %1$d</string>
    <string name="em_live_gift_gift_info">X %1$d</string>
    <string name="em_live_gift_sender_info">%1$s 送出</string>
    <string name="em_gift_default_name_1">香水玫瑰</string>
    <string name="em_gift_default_name_2">心想事成</string>
    <string name="em_gift_default_name_3">比翼双飞</string>
    <string name="em_gift_default_name_4">生日蛋糕</string>
    <string name="em_gift_default_name_5">大礼包</string>
    <string name="em_gift_default_name_6">春花烂漫</string>
    <string name="em_gift_default_name_7">小狗狗</string>
    <string name="em_gift_default_name_8">金镯子</string>
    <string name="em_gift_default_name_9">金手镯</string>
    <string name="em_gift_default_name_10">大钻石</string>
    <string name="em_gift_default_name_11">心心相映</string>
    <string name="em_gift_default_name_12">白金项链</string>
    <string name="em_gift_send">赠送</string>
    <string name="em_gift_send_confirm">是否赠送</string>
    <string name="em_gift_send_info">%1$d个 %2$s</string>
    <string name="em_gift_input_num_title">输入赠送数量</string>
    <string name="em_gift_show_send">送出礼物</string>


    <string name="em_live_msg_like">%1$s 点了 %2$d个赞</string>
    <string name="em_live_user_manage_users">成员(%1$d)</string>
    <string name="em_live_user_manage_white">白名单(%1$d)</string>
    <string name="em_live_user_manage_mute">用户禁言(%1$d)</string>
    <string name="em_live_msg_normal">普</string>
    <string name="em_live_msg_barrage">弹</string>
    <string name="em_live_shutdown">直播中断，是否重新开始直播？</string>
    <string name="em_live_open_camera_fail">摄像头打开失败，是否退出？</string>
    <string name="em_live_network_connect_fail">网络连接失败</string>

    <string name="em_live_create_room">创建直播间</string>
    <string name="em_live_create_room_check_info">请填写完整</string>
    <string name="em_live_disconnect_title">网络连接中断，是否退出房间？</string>
    <string name="em_live_open_video_fail_title">播放失败，是否退出房间？</string>


    <string name="em_set_select_auto">是否切换为访客模式？</string>
    <string name="em_set_select_login">是否切换为登录模式？</string>
    <string name="em_set_select_switch">切换</string>
    <string name="em_set_logout">退出</string>
    <string name="em_set_logout_confirm">是否退出？</string>


    <string name="em_create_room_name_hint">请输入直播间名称</string>
    <string name="em_create_room_cover_hint">设置一个吸引人的封面</string>
    <string name="em_create_room">传统直播</string>
    <string name="em_create_fast_room">极速直播</string>
    <string name="em_create_interaction_room">互动直播</string>

    <string name="ok">OK</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">prompt</string>

    <string name="home_title">Stream Channels</string>
    <string name="home_logged_tip">Account is already logged in elsewhere!</string>

    <string name="live_list_no_streamer_tip">No Streamer Live now</string>
    <string name="live_list_start_live_stream_tip">Start your Livestream!</string>
    <string name="live_list_warning">There is already a host playing, please choose another room</string>

    <string name="search_tip">Please input search content</string>
    <string name="search_empty_result">No Result for %1$s</string>
    <string name="search_text_hint">Search</string>

    <string name="create_live_change">Change</string>
    <string name="create_live_flip">Flip</string>
    <string name="create_live_default_name">Welcome to my Channel!</string>
    <string name="create_live_go_live">Go LIVE!</string>
    <string name="create_live_change_cover">Change Cover</string>
    <string name="create_live_room_check_info">Please fill in completely</string>

    <string name="live_room_id">Room ID：%1$s</string>
    <string name="live_attention">attention</string>

    <string name="profile_title">Profile</string>

    <string name="live_type_normal_title">CDN Livestream</string>

    <string name="live_dialog_quit_title">End your Livestream？</string>
    <string name="live_dialog_quit_btn_title">END</string>
    <string name="anchor_end_live_stream_tip">Your Live Stream has ended</string>
    <string name="role_type_streamer">Streamer</string>
    <string name="role_type_moderator">Moderator</string>

    <string name="ban_all">Ban All</string>
    <string name="attention_ban_all">Streamer has set Banned on all Chats</string>

    <string name="setting_title">Settings</string>
    <string name="setting_about_title">About</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_change_avatar">Click to Change Avatar</string>
    <string name="setting_username_title">Username</string>
    <string name="setting_gender_title">Gender</string>
    <string name="setting_birthday_title">Birthday</string>
    <string name="setting_unknown">Unknown</string>

    <string name="about_sdk_version">SDK Version</string>
    <string name="about_lib_version">UI Library Version</string>
    <string name="about_policy">Legals n’ Policies</string>
    <string name="about_more">More</string>
    <string name="about_net_addr">Agora.io</string>

    <string name="live_msg_member_add">join live room</string>
    <string name="live_msg_gift">%1$s 赠送了 %2$s x%3$d</string>

    <string name="room_manager_remove_from_allowed_list">Remove from Allowed List</string>
    <string name="room_manager_move_to_allowed_list">Move to Allowed List</string>
    <string name="room_manager_remove_as_moderator">Remove as Moderator</string>
    <string name="room_manager_assign_as_moderator">Assign as Moderator</string>
    <string name="room_manager_timeout">TimeOut</string>
    <string name="room_manager_mute">Mute</string>
    <string name="room_manager_unmute">Unmute</string>
    <string name="room_manager_ban">Ban</string>
    <string name="room_manager_unban">Unban</string>
    <string name="room_manager_timeout_tip">%1$s will be timed out for</string>
    <string name="room_manager_timeout_attention_tip">%1$s Anthony has been timed out for %2$s seconds.</string>
    <string name="room_manager_ban_tip">Want to ban %1$s?</string>
    <string name="room_manager_ban_attention_tip">%1$s has been banned.</string>

    <string name="live_in_mute_list">mute</string>
    <string name="live_out_mute_list">unumte</string>
    <string name="live_anchor_add_white">move to allowed list</string>
    <string name="live_anchor_remove_from_white">remove from allowed list</string>
    <string name="live_anchor_mute_all">Streamer has set banned on all Chats</string>
    <string name="live_anchor_mute_all_attention_tip">%1$s has set Banned on all Chats</string>

    <string name="live_mute_all">banned on all chats</string>
    <string name="live_out_mute_all">unban on all chats</string>

    <string name="live_member_all_viewers">All Viewers</string>

</resources>
