<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_live_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.agora.chat.uikit.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/em_common_title_bar_height"
        app:titleBarDisplayHomeAsUpEnabled="false"
        app:titleBarRightTitle="@string/cancel"
        app:titleBarRightVisible="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/em_live_create_room"
            android:textColor="@color/common_black"
            android:textSize="@dimen/em_size_big_notify" />

        <TextView
            android:id="@+id/txt_associate_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:background="@null"
            android:text="关联直播间"
            android:textColor="@color/common_white"
            android:textSize="18sp"
            android:visibility="gone" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_live_name"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="@dimen/em_margin_25"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/em_create_room_et_bg_shape"
                android:hint="@string/em_create_room_name_hint"
                android:paddingStart="@dimen/em_margin_20"
                android:paddingLeft="@dimen/em_margin_20"
                android:paddingEnd="@dimen/em_margin_20"
                android:paddingRight="@dimen/em_margin_20"
                android:textColor="@color/common_black"
                android:textSize="@dimen/em_size_big"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/layout_live_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/em_create_room_cover_bg_shape"
                app:layout_constraintBottom_toTopOf="@id/edt_live_desc"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_live_name">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/live_cover_placeholder" />

                    <TextView
                        android:id="@+id/txt_cover_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/em_margin_10"
                        android:text="@string/em_create_room_cover_hint"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <io.agora.chat.uikit.widget.EaseImageView
                    android:id="@+id/img_live_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:ease_radius="22dp"
                    app:ease_shape_type="rectangle" />

            </FrameLayout>

            <EditText
                android:id="@+id/edt_live_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="直播描述"
                android:textColor="@color/common_black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btn_start_live"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_live_cover" />
            <!--  <EditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="6dp"
                  android:hint="介绍自己"
                  android:textSize="18sp"
                  />-->

            <Button
                android:id="@+id/btn_start_live"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/em_live_create_room_btn_bg_shape"
                android:text="@string/em_create_room"
                android:textColor="@color/common_white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_start_fast_live"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_live_desc" />

            <Button
                android:id="@+id/btn_start_fast_live"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/em_live_create_room_btn_bg_shape"
                android:text="@string/em_create_fast_room"
                android:textColor="@color/common_white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_start_live" />

            <Button
                android:id="@+id/btn_start_interaction_live"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/em_live_create_room_btn_bg_shape"
                android:text="@string/em_create_interaction_room"
                android:textColor="@color/common_white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_start_fast_live" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
