<?xml version="1.0" encoding="utf-8"?>
<io.agora.livedemo.ui.widget.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_lived_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/em_live_list_item_lived_bg_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|end"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/audience_num"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/placeholder"
                android:textSize="@dimen/em_size_big"
                tools:text="Tom" />

            <TextView
                android:id="@+id/audience_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="@dimen/em_size_normal"
                tools:text="1263正在看" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_ongoing_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/em_margin_10"
            android:layout_marginTop="@dimen/em_margin_10"
            android:background="@drawable/em_live_living_bg_shape"
            android:drawableLeft="@drawable/em_living_icon"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:minHeight="16dp"
            android:paddingLeft="3dp"
            android:paddingRight="6dp"
            android:text="@string/em_live_list_item_living"
            android:textColor="@color/white"
            android:textSize="@dimen/em_size_smaller"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status_unactivite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/em_live_list_item_living_shape"
            android:drawableLeft="@drawable/em_live_unactivity_icon"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/em_live_list_item_open"
            android:textColor="@color/white"
            android:textSize="@dimen/em_size_big"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status_lived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/em_live_list_item_lived_shape"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/em_live_list_item_lived"
            android:textColor="@color/white"
            android:textSize="@dimen/em_size_big"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_lived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="view_lived_bg,tv_status_lived" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</io.agora.livedemo.ui.widget.SquareLayout>
